syntax = "proto3";
package multiplayer.model;
option go_package = "api/model";

import "google/protobuf/timestamp.proto";

message User {
    enum Platform {
        Steam = 0;
        Quest = 1;
    }

    string id = 1;
    string displayName = 2;
    string location = 3;
    Platform platform = 4;
    google.protobuf.Timestamp timeCreated = 5;
    google.protobuf.Timestamp lastActivity = 6;
}

message UserRequest {
    string id = 1;
    string displayName = 2;
    string location = 3;
    User.Platform platform = 4;
}